fixed flex gap in dashboard

--- a/src/index.css
+++ b/src/index.css
@@ -20,4 +20,5 @@ body {
 
 .App {
   display: flex;
+  gap: 5rem;
 }
